fixing the documents less the gap anf check success fully the register page

--- a/document page/doc.css
+++ b/document page/doc.css
@@ -10,7 +10,6 @@
     background:trea ;
 }
 
-
 .border-gradient {
     border-radius: 20px;
     margin-top: 90px;
@@ -100,4 +99,35 @@
   display : flex ;
   flex-wrap: wrap;
   justify-content: space-around;
+}
+.modal{
+  z-index: 5;
+}
+.scrollAble{
+  height: 100px;
+  overflow: scroll;
+  overflow-x: hidden;
+  box-shadow:  5px 10px 8px #888888;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+  
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: grey; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #8a8a8ad4; 
 }
